--- a/app/src/main/res/layout/activity_skill.xml
+++ b/app/src/main/res/layout/activity_skill.xml
@@ -61,7 +61,7 @@
         app:layout_constraintTop_toBottomOf="@+id/textView5">
 
         <ToggleButton
-            android:id="@+id/toggleButton4"
+            android:id="@+id/coedLeagueBtn"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginEnd="16dp"
@@ -98,7 +98,6 @@
         android:layout_marginBottom="16dp"
         android:background="@drawable/swoosh_toggle"
         android:fontFamily="@font/montserrat"
-        android:onClick="leagueNextClicked"
         android:text="@string/finish"
         android:textColor="@android:color/white"
         android:textSize="18sp"
